--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 .header{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 .sun{
     width: 50px;
@@ -27,10 +28,33 @@ body{
     display: flex;
     align-items: center;
 }
+.HCM{
+    display: inline-block;
+    position: relative;
+    width: 1000px;
+}
+.select{
+    display: none;
+    position: absolute;
+    z-index: 1;
+    font-size: 50px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 1000px;
+    background-color: #f9f9f9;
+}
+.head{
+    cursor: pointer;
+    border: none;
+    width: 100%;
+}
+.HCM:hover .select{
+    display: block;
+}
 .city{
     padding-left: 60px;
     display: flex;
     align-items: center;
+    font-size: 20px;
 }
 .water{
     display: flex;
@@ -43,13 +67,20 @@ body{
     display: flex;
     align-items: center;
 }
+p{
+    padding-left: 362px;
+    margin: 0;
+}
+.next{
+    display: flex;
+    align-items: center;
+    font-size: 35px;
+}
+.extra{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 25px;
+}
 
-body{
-    background-color: aliceblue;
-}
-#main{
-    background-color: white;
-}
-.header:hover{
-    background-color: green;
-}
+
